<resources>
    <string name="app_name">ClonaMusic</string>

    <string name="label_email_txt">Email</string>
    <string name="label_password_txt">Password</string>

    <string name="song_name_txt">Song Name</string>
    <string name="artist_name_txt">Artist Name</string>
    <string name="loop_btn_txt">B</string>
    <string name="rand_btn_txt">B</string>

    <string name="arrow_right_btn_txt">B</string>
    <string name="pause_btn_txt">B</string>
    <string name="arrow_left_btn_txt">B</string>

    <string name="title_songlist_txt">Up next:</string>

    <string name="number_song_txt">1.</string>

    <string name="title_activity_musicplayer">Musicplayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
